force-app/main/default/objects/Webhook__c/Webhook__c.object-meta.xml
<CustomObject>
    <description>Outbound webhook subscription for booking events</description>
    <label>Webhook</label>
    <nameField>
        <label>Webhook Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Webhooks</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>