force-app/main/default/objects/Webhook__c/fields/Events__c.field-meta.xml
<CustomField>
    <fullName>Events__c</fullName>
    <label>Subscribed Events</label>
    <required>true</required>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>booking.created</fullName><default>false</default><label>Booking Created</label></value>
            <value><fullName>booking.cancelled</fullName><default>false</default><label>Booking Cancelled</label></value>
            <value><fullName>booking.rescheduled</fullName><default>false</default><label>Booking Rescheduled</label></value>
            <value><fullName>booking.confirmed</fullName><default>false</default><label>Booking Confirmed</label></value>
            <value><fullName>booking.rejected</fullName><default>false</default><label>Booking Rejected</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>