force-app/main/default/objects/Webhook__c/fields/Owner_User__c.field-meta.xml
<CustomField>
    <fullName>Owner_User__c</fullName>
    <label>Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Webhooks</relationshipLabel>
    <relationshipName>Webhooks</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>