force-app/main/default/objects/Webhook__c/fields/Secret__c.field-meta.xml
<CustomField>
    <fullName>Secret__c</fullName>
    <description>HMAC signing secret for webhook payload verification</description>
    <label>Signing Secret</label>
    <length>175</length>
    <type>EncryptedText</type>
    <maskChar>asterisk</maskChar>
    <maskType>all</maskType>
</CustomField>